fixed some type, spacing, and wrapped up first round of work on empty state

--- a/app/style/components/compose.scss
+++ b/app/style/components/compose.scss
@@ -36,7 +36,8 @@
   label {
     align-items: flex-end;
     display: flex;
-    font-size: 13px;
+    font-size: 18px;
+    line-height: 24px;
     font-weight: 700;
     justify-content: center;
     margin: 0px auto 0;
@@ -53,7 +54,7 @@
     border: none;
     font-size: 26px;
     font-weight: 300;
-    height: 60%;
+    height: 30%;
     margin: auto;
     outline: 0;
     resize: none;
