--- a/app/style/components/questions.scss
+++ b/app/style/components/questions.scss
@@ -14,6 +14,7 @@
   align-items: center;
   display: flex;
   height: 70%;
+  margin-top: -130px;
   position: relative;
   text-align: center;
   width: 100%;
