--- a/app/style/components/recordings.scss
+++ b/app/style/components/recordings.scss
@@ -63,6 +63,11 @@
     &.show{
       display: block;
     }
+
+    h3 {
+      font-size: 18px;
+      line-height: 24px;
+    }
   }
 
   ol {
